# usb-ids.rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml  usbids-updater.yml
src/: lib.rs  usb.ids
