[package]
name = "usb-ids"
description = "Rust wrappers for the USB ID Repository"
license-file = "LICENSE"
version = "0.0.3"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/woodruffw/usb-ids.rs"
repository = "https://github.com/woodruffw/usb-ids.rs"
keywords = ["usb"]
categories = ["hardware-support"]

[build-dependencies]
phf_codegen = "0.8"
regex = "1.4"

[dependencies]
phf = "0.8"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-header@ -->"
replace = "<!-- @next-header@ -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-url@ -->"
replace = "<!-- @next-url@ -->\n[Unreleased]: https://github.com/woodruffw/kbs2/compare/{{tag_name}}...HEAD"
exactly = 1
