[package]
name = "usb-ids"
description = "Rust wrappers for the USB ID Repository"
license = "MIT"
version = "1.2024.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/woodruffw/usb-ids.rs"
repository = "https://github.com/woodruffw/usb-ids.rs"
keywords = ["usb"]
categories = ["hardware-support"]

[build-dependencies]
nom = { version = "7.0", default-features = false }
phf_codegen = "0.11"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies]
phf = "0.11"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-header@ -->"
replace = "<!-- @next-header@ -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-url@ -->"
replace = "<!-- @next-url@ -->\n[Unreleased]: https://github.com/woodruffw/usb-ids.rs/compare/{{tag_name}}...HEAD"
exactly = 1
